# containerization

./: README.md
containerization_01/: Dockerfile.1  Dockerfile.2  pyproject.toml  requirements.txt
containerization_01/requirements/: requirements.txt
containerization_01/spaceship/routers/: api.py  matrix.py
containerization_02/: .gitignore  Dockerfile.1  Dockerfile.2  Dockerfile.3  main.go
containerization_03/: Dockerfile  index.js  package-lock.json  package.json
