[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[[package]]
name = "numpy"
version = "1.22.3"
description = "NumPy"
category = "main"
optional = false
python-version = "3.9"